# counter

./: .clang-format  .clang-tidy  .cppcheck_suppressions.txt  .cpplint.cfg  .gitignore  .taplo.toml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  EXPERIMENTS.md  LICENCE  README.md  analyse.sh  counter.toml.example  cppcheck_suppressions.txt  data.js  example-config.toml  flake.nix
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_formula.cpp  bench_implication.cpp  bench_model_counter.cpp  bench_mutation.cpp  bench_suite.hpp  bench_support.hpp  main.cpp
cmake/: black.cmake  clang_tidy_cache_wrapper.sh  dependencies.cmake  docs.cmake  format.cmake  ganak.cmake  lint.cmake  run_clang_tidy.cmake  spot.cmake
dev/bench/: data.js
docs/: Doxyfile.in  Doxyfile.internal.in  architecture.rst  building.md  conf.py.in  configuration.rst  index.rst  tlsf.rst
docs/api/: bounded_async.rst  config.rst  config_io.rst  prop_formula.rst  requirement.rst  serialisation.rst  status_line.rst  thread_pool.rst
docs/api/crash/: crash_handler.rst
docs/api/filter/: bloat.rst  implication.rst  implication_check.rst  vacuity.rst  well_separation.rst
docs/api/fitness/: function.rst  halstead.rst  model_counter.rst  semantic_similarity.rst  status.rst  syntactic_similarity.rst  transfer_matrix.rst
docs/api/genetic/: crossover.rst  generation.rst  mutation.rst  nsga2.rst  operators.rst  random_source.rst  scored.rst
docs/api/runner/: black.rst  formaliser.rst  ganak.rst  ltlfilt.rst  spot.rst
docs/api/tlsf/: crossover.rst  filter.rst  fitness.rst  mucs.rst  mutation.rst  operators.rst  parser.rst  pipeline.rst  specification.rst  writer.rst
examples/: arbiter-fixed.json  arbiter.json  takeoff-fixed-1.json  takeoff-fixed-2.json  takeoff-unfixed-1.json  takeoff-unfixed-2.json  takeoff.json
examples/arbiter-gr1/: ideal.tlsf  spec.tlsf
examples/arbiter-handshake/: spec.tlsf
examples/fsm/: spec.json
examples/fsm-combined/: spec.json
examples/fsm-combined/fixes/: add-not-limits-and-not-standby.json  add-not-limits-and-not-supported.json  add-not-limits-contract-for.json  add-not-limits-extend-within.json  add-request-and-not-standby.json  add-request-and-not-supported.json  add-request-contract-for.json  add-request-extend-within.json
examples/fsm-timing/: spec.json
examples/fsm-timing/fixes/: add-not-standby.json  add-not-supported.json  contract-for.json  extend-within.json
examples/fsm/fixes/: add-not-limits.json  add-request.json
examples/minepump/fixes/: fixed0.tlsf  fixed2.tlsf
examples/rg2/: spec.tlsf
examples/takeoff/: spec.json
fuzz/: CMakeLists.txt  ltl_equivalence_fuzzer.cpp
include/: bounded_async.hpp  config.hpp  config_io.hpp  crash_handler.hpp  formula_dimacs.hpp  ganak_runner.hpp  model_counter.hpp  prop_formula.hpp  requirement.hpp  semantic_similarity.hpp  serialisation.hpp  status_line.hpp  syntactic_similarity.hpp  thread_pool.hpp  transfer_matrix.hpp  transfer_system.hpp
include/crash/: crash_handler.hpp
include/filter/: bloat.hpp  implication.hpp  implication_check.hpp  vacuity.hpp  well_separation.hpp
include/fitness/: function.hpp  halstead.hpp  model_counter.hpp  semantic_similarity.hpp  spot_runner.hpp  status.hpp  syntactic_similarity.hpp  transfer_matrix.hpp
include/genetic/: crossover.hpp  generation.hpp  mutation.hpp  nsga2.hpp  operators.hpp  random_source.hpp  scored.hpp
include/prop_formula/: core.hpp
include/runner/: black.hpp  formaliser.hpp  ganak.hpp  ltlfilt.hpp  spot.hpp
include/tlsf/: crossover.hpp  filter.hpp  fitness.hpp  mucs.hpp  mutation.hpp  operators.hpp  parser.hpp  pipeline.hpp  specification.hpp  writer.hpp
schema/: specification.schema.json
schemas/: config-schema.json  specification.schema.json
scripts/: README.md  analyse.ipynb  gen_configs.py  merge_experiments.py  recompare.py  requirements.txt  run_experiments.py  test_experiment_paths.py
src/: compare.cpp  config_io.cpp  crash_handler.cpp  formula_dimacs.cpp  ganak_runner.cpp  ltl.cpp  main.cpp  model_counter.cpp  mucs.cpp  prop_formula.cpp  realize.cpp  requirement.cpp  semantic_similarity.cpp  signal_tracer.cpp  syntactic_similarity.cpp  thread_pool.cpp  transfer_matrix.cpp  transfer_system.cpp
src/crash/: crash_handler.cpp  signal_tracer.cpp
src/filter/: bloat.cpp  implication.cpp  implication_check.cpp  vacuity.cpp  well_separation.cpp
src/fitness/: black_runner.cpp  function.cpp  ganak_runner.cpp  halstead.cpp  model_counter.cpp  semantic_similarity.cpp  spot_runner.cpp  status.cpp  syntactic_similarity.cpp  transfer_matrix.cpp
src/genetic/: crossover.cpp  generation.cpp  mutation.cpp  nsga2.cpp
src/prop_formula/: cnf.cpp  core.cpp  dimacs_api.cpp  internal.hpp  parser.cpp  similarity.cpp  transform.cpp
src/runner/: black.cpp  formaliser.cpp  ganak.cpp  ltlfilt.cpp  spot.cpp
src/tlsf/: crossover.cpp  filter.cpp  fitness.cpp  mucs.cpp  mutation.cpp  operators.cpp  parser.cpp  pipeline.cpp  specification.cpp  writer.cpp
test/: CMakeLists.txt  config_io_tests.cpp  formula_dimacs_tests.cpp  ganak_runner_tests.cpp  main.cpp  prop_formula_tests.cpp  requirement_tests.cpp  semantic_similarity_tests.cpp  serialisation_tests.cpp  syntactic_similarity_tests.cpp  test_suite.hpp  test_support.hpp  transfer_matrix_tests.cpp  transfer_system_tests.cpp
test/filter/: implication_tests.cpp  vacuity_tests.cpp  well_separation_tests.cpp
test/fitness/: black_runner_tests.cpp  function_tests.cpp  ganak_runner_tests.cpp  halstead_tests.cpp  semantic_similarity_tests.cpp  spot_runner_tests.cpp  status_tests.cpp  syntactic_similarity_tests.cpp  transfer_matrix_tests.cpp
test/genetic/: crossover_tests.cpp  generation_tests.cpp  mutation_tests.cpp  nsga2_tests.cpp
test/prop_formula/: ast_tests.cpp  cnf_tests.cpp  rewrite_tests.cpp  similarity_tests.cpp  temporal_tests.cpp
test/runner/: black_tests.cpp  formaliser_tests.cpp  ganak_tests.cpp  ltlfilt_tests.cpp  spot_tests.cpp
test/tlsf/: filter_tests.cpp  fitness_tests.cpp  genetic_tests.cpp  mucs_tests.cpp  parser_tests.cpp  pipeline_tests.cpp  writer_tests.cpp
(+2 files in other folders)
